config/ingress-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-gateway
  labels:
    name: ingress-gateway
