config/ingress-gateway/service-not-found.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployment-not-found
  namespace: ingress-gateway
spec:
  selector:
    app: deployment-not-found
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
