config/ingress-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: ingress-gateway
  annotations:
    io.cilium.gateway/node-selector: "ingress.kibaship.com/ready=true"
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 30080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 30443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: tenant-wildcard-certificate
            namespace: certificates
      allowedRoutes:
        namespaces:
          from: All
